--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.tablist {
+  flex-basis: 240px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
