--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,23 +24,19 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .tablist {
   flex-basis: 240px;
+  flex-wrap: wrap;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 30px;
+}
+
+.ecko {
+
+}
+.ecko .articleNav, .ecko #form, hr {
+  display: none !important;
 }
