--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,4 @@
 .tablist {
-  flex-basis: 240px;
   flex-wrap: wrap;
   display: flex;
   justify-content: center;
@@ -46,7 +45,10 @@
 .salanda h4.headline {
   font-size: 20px;
 }
-
+.tankovna {
+  width: 80%;
+  margin: auto;
+}
 .gastro {
   width: 80%;
   margin: auto;
